# Branches-Connection

./: README.md  pyproject.toml
branches_connection/: create_event_branch.py  hooks.py  modules.txt
branches_connection/branche_connection/doctype/branch_connecting/: branch_connecting.js  branch_connecting.json  branch_connecting.py  test_branch_connecting.py
branches_connection/branche_connection/doctype/branches_document_type/: branches_document_type.json  branches_document_type.py
branches_connection/branche_connection/doctype/event_branch/: event_branch.js  event_branch.json  event_branch.py  test_event_branch.py
